<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".LoginOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="10">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step1"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step2"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>

<!--    <ImageView-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:src="@drawable/otp_icon"-->
<!--        android:layout_weight="18"/>-->
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:src="@drawable/otp_animated_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:gravity="center_vertical"
        android:letterSpacing="0.08"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:maxLength="6"
            android:hint="@string/otp"
            android:inputType="number"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_rounded_cornor"
            android:elevation="5dp"
            android:id="@+id/login_otp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="10">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/next"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/login_next_btn"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:id="@+id/resend_otp_textview"
        android:text="@string/resend_otp_in_30_sec"/>
</LinearLayout>